--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -262,6 +262,9 @@ on post-fs-data
 
     setprop vold.post_fs_data_done 1
 
+    #Start RILD
+    start ril-daemon
+
     #Create FM dir for patchdownloader
     mkdir /data/vendor/fm 0770 system system
     chmod 0770 /data/vendor/fm
